--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
           videoContainer.classList.add('v')
 
           const title = document.createElement('p')
-          title.textContent = `${v.title} (${v.duration}) in ${v.q}`
+          title.textContent = `${v.title} (${v.duration})`
           videoContainer.appendChild(title)
 
           const thumbnailLink = document.createElement('a')
