--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
         position: relative;
         display: flex;
         flex-flow: column;
+        overflow: hidden;
       }
 
       .v p {
