--- a/public/index.html
+++ b/public/index.html
@@ -35,10 +35,15 @@
       }
 
       header {
+        position: fixed;
+        top: 0;
+        left: 0;
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         gap: 0.666em;
-        margin: 0 0 0.666em 0;
+        padding: 0.666em;
+        background: black;
+        z-index: 10;
       }
 
       select {
@@ -49,6 +54,7 @@
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         gap: 0.666em;
+        margin: calc(0.666em * 4) 0 0 0;
       }
 
       .v {
@@ -68,8 +74,20 @@
     <div id="v0"></div>
 
     <script>
-      let v0
-      let videos
+      let v0 = []
+      let videos = []
+      let page = 1
+
+      window.addEventListener('scroll', async function (e) {
+        if (
+          window.innerHeight + Math.round(window.scrollY) >=
+          document.body.offsetHeight
+        ) {
+          page++
+          await get()
+          ui()
+        }
+      })
 
       function res(cur, ns) {
         var undef
@@ -104,11 +122,17 @@
         }
       }
 
+      async function get() {
+        const response = await fetch(`/yt/0?page=${page}`)
+        const data = await response.json()
+
+        v0 = [...v0, ...data.videos]
+        videos = [...videos, ...data.videos]
+        console.log(videos.length)
+      }
+
       async function init() {
-        const response = await fetch('/yt/0')
-        v0 = await response.json()
-        videos = v0
-        console.log(v0.length)
+        await get()
 
         const selects = [
           {
@@ -146,6 +170,7 @@
               videos = v0
             } else {
               videos = v0.filter(v => res(v, select.id) === select.value)
+              console.log(videos.length)
             }
             ui()
           })
