--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,13 @@
     <title>v0</title>
     <style>
       * {
-         box-sizing: border-box;
+        box-sizing: border-box;
       }
 
-      html, body {
+      html,
+      body {
         margin: 0;
-        padding 0;
+        padding: 0;
       }
 
       body {
@@ -48,6 +49,7 @@
 
       select {
         overflow: hidden;
+        width: 100%;
       }
 
       #v0 {
