--- a/public/index.html
+++ b/public/index.html
@@ -149,8 +149,8 @@
             s: ['', ...new Set(videos.map(v => v.duration))]
           },
           {
-            id: 'uploadedAt',
-            s: ['', ...new Set(videos.map(v => v.uploadedAt))]
+            id: 'uploadDate',
+            s: ['', ...new Set(videos.map(v => v.uploadDate))]
           },
           {
             id: 'q',
