--- a/public/index.html
+++ b/public/index.html
@@ -145,8 +145,8 @@
             s: ['', ...new Set(videos.map(v => v.author.name))]
           },
           {
-            id: 'duration.timestamp',
-            s: ['', ...new Set(videos.map(v => v.duration.timestamp))]
+            id: 'timestamp',
+            s: ['', ...new Set(videos.map(v => v.timestamp))]
           },
           {
             id: 'uploadDate',
