--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
           a.target = '_blank'
 
           const img = document.createElement('img')
-          img.src = v.bestThumbnail.url
+          img.src = v.thumbnail
           img.alt = v.title
 
           a.appendChild(img)
