--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>v0</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <style>
       * {
         box-sizing: border-box;
@@ -20,6 +23,7 @@
       body {
         display: flex;
         flex-flow: column;
+        font-size: 16px;
         background: grey;
         color: white;
         height: 100dvh;
