--- a/public/thumb.html
+++ b/public/thumb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>v0</title>
+    <title>𝒜𝓇𝓇𝒶𝓃𝑔𝒾𝓃𝑔 𝒟𝒶𝓉𝒶 𝐼𝓃𝓉𝑜 𝐿𝒾𝓈𝓉𝓈*</title>
     <style>
       * {
         box-sizing: border-box;
