--- a/public/index.html
+++ b/public/index.html
@@ -22,12 +22,10 @@
 
       body {
         display: flex;
-        flex-flow: column;
         font-size: 16px;
         background: grey;
-        color: white;
+        color: black;
         height: 100dvh;
-        max-width: 666px;
       }
 
       img {
@@ -50,27 +48,70 @@
         border: 0;
       }
 
-      #v0 {
+      #titles {
         display: flex;
         flex-flow: column nowrap;
         columns: 2;
+        height: 50dvh;
         overflow-y: scroll;
         padding: 0.666em;
       }
 
-      .v {
+      .title {
         margin: 0 0 0.666em 0;
       }
 
-      footer {
+      #thumbs {
+        width: 100%;
+        height: 100dvh;
+        overflow-y: scroll;
+        padding: 0.666em;
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        grid-template-rows: masonry;
+        gap: 0.666em;
+        font-size: 12px;
+      }
+
+      .thumb {
+        width: 100%;
+        height: auto;
+      }
+
+      .thumb p {
+        margin: 0 0 0.333em 0;
+      }
+
+      .thumb span {
+        font-family: monospace;
+      }
+
+      header {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        width: 70dvw;
+        gap: 0.666em;
+        padding: 0.666em;
+        background: grey;
+        z-index: 10;
       }
     </style>
   </head>
   <body>
-    <div id="v0"></div>
-    <footer>
-      <iframe id="p" src="https://www.youtube.com/embed/0"> </iframe>
-    </footer>
+    <header></header>
+    <div
+      style="
+        display: flex;
+        flex-flow: column nowrap;
+        width: 100%;
+        max-width: 30dvw;
+      "
+    >
+      <div id="titles"></div>
+      <iframe id="p" src="https://www.youtube.com/embed/0"></iframe>
+    </div>
+    <div id="thumbs"></div>
 
     <script>
       let v0 = []
@@ -78,10 +119,10 @@
       let current = {}
       let page = 1
 
-      window.addEventListener('scroll', async function (e) {
+      window.addEventListener('scroll', async e => {
         if (
           window.innerHeight + Math.round(window.scrollY) >=
-          document.body.offsetHeight
+          document.querySelector('#thumbs').offsetHeight
         ) {
           page++
           await get()
@@ -97,15 +138,16 @@
       }
 
       function ui() {
-        document.getElementById('v0').innerHTML = ''
+        document.querySelector('#titles').innerHTML = ''
+        document.querySelector('#thumbs').innerHTML = ''
 
         for (const v of videos) {
-          const div = document.createElement('div')
-          div.classList.add('v')
+          const title = document.createElement('div')
+          title.classList.add('title')
 
           const p = document.createElement('p')
           p.innerHTML = `${v.title} (${v.timestamp})`
-          div.appendChild(p)
+          title.appendChild(p)
 
           const a = document.createElement('a')
           a.addEventListener('click', function (e) {
@@ -119,9 +161,35 @@
           a.target = '_blank'
 
           a.appendChild(p)
-          div.appendChild(a)
+          title.appendChild(a)
 
-          document.getElementById('v0').appendChild(div)
+          document.querySelector('#titles').appendChild(title)
+
+          const thumb = document.createElement('div')
+          thumb.classList.add('thumb')
+
+          const pp = document.createElement('p')
+          pp.innerHTML = `<span>${v.uploadDate}</span> ${v.title} (${v.timestamp})`
+          thumb.appendChild(pp)
+
+          const img = document.createElement('img')
+          img.src = v.thumbnail
+
+          const aa = document.createElement('a')
+          aa.addEventListener('click', function (e) {
+            if (current !== v) e.preventDefault()
+            document.querySelector(
+              '#p'
+            ).src = `https://www.youtube.com/embed/${v.videoId}`
+            current = v
+          })
+          aa.href = v.url
+          aa.target = '_blank'
+
+          aa.appendChild(img)
+          thumb.appendChild(aa)
+
+          document.querySelector('#thumbs').appendChild(thumb)
         }
       }
 
@@ -130,11 +198,62 @@
         const data = await response.json()
         v0 = [...v0, ...data.videos]
         videos = [...videos, ...data.videos]
-        console.log(videos.length)
+        console.log(videos.length, videos)
       }
 
       async function init() {
         await get()
+
+        const selects = [
+          {
+            id: 'title',
+            s: ['', ...new Set(videos.map(v => v.title))]
+          },
+          {
+            id: 'author.name',
+            s: ['', ...new Set(videos.map(v => v.author.name))]
+          },
+          {
+            id: 'timestamp',
+            s: [
+              '',
+              ...new Set(
+                videos
+                  .map(v => v.timestamp)
+                  .sort()
+                  .filter(Boolean)
+              )
+            ]
+          },
+          {
+            id: 'uploadDate',
+            s: ['', ...new Set(videos.map(v => v.uploadDate).sort())]
+          },
+          {
+            id: 'meta.q',
+            s: ['', ...new Set(videos.map(v => v.meta.q))]
+          }
+        ].map(s => {
+          const select = document.createElement('select')
+          select.id = s.id
+          s.s.forEach(v => {
+            const o = document.createElement('option')
+            o.value = v
+            o.textContent = v
+            select.appendChild(o)
+          })
+          document.querySelector('header').appendChild(select)
+          select.addEventListener('change', () => {
+            if (select.value === '') {
+              videos = v0
+            } else {
+              videos = v0.filter(v => res(v, select.id) === select.value)
+              console.log(videos.length)
+            }
+            ui()
+          })
+        })
+
         ui()
       }
 
