--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,9 @@
 <html>
   <head>
     <title>𝒜𝓇𝓇𝒶𝓃𝑔𝒾𝓃𝑔 𝒟𝒶𝓉𝒶 𝐼𝓃𝓉𝑜 𝐿𝒾𝓈𝓉𝓈*</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <style>
       * {
         box-sizing: border-box;
-      }
-
-      html {
-        filter: invert(0);
       }
 
       html,
@@ -22,10 +15,11 @@
 
       body {
         display: flex;
-        font-size: 16px;
-        background: grey;
-        color: black;
-        height: 100dvh;
+        flex-flow: column;
+        background: black;
+        color: white;
+        font-size: 12px;
+        margin: 0.666em;
       }
 
       img {
@@ -41,79 +35,58 @@
         display: flex;
       }
 
-      iframe {
-        display: flex;
-        width: 100%;
-        height: 50dvh;
-        border: 0;
-      }
-
-      #titles {
-        display: flex;
-        flex-flow: column nowrap;
-        columns: 2;
-        height: 50dvh;
-        overflow-y: scroll;
-        padding: 0.666em;
-      }
-
-      .title {
-        margin: 0 0 0.666em 0;
-      }
-
-      #thumbs {
-        width: 100%;
-        height: 100dvh;
-        overflow-y: scroll;
-        padding: 0.666em;
+      header {
+        position: fixed;
+        top: 0;
+        left: 0;
         display: grid;
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-        grid-template-rows: masonry;
+        grid-template-columns: repeat(5, 1fr);
         gap: 0.666em;
-        font-size: 12px;
+        padding: 0.666em;
+        background: black;
+        z-index: 10;
       }
 
-      .thumb {
+      select {
+        overflow: hidden;
         width: 100%;
-        height: auto;
       }
 
-      .thumb p {
+      #v0 {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        gap: 0.666em;
+        margin: calc(0.666em * 4) 0 0 0;
+      }
+
+      .v {
+        position: relative;
+        display: flex;
+        flex-flow: column;
+        overflow: hidden;
+      }
+
+      .v p {
         margin: 0 0 0.333em 0;
       }
 
-      .thumb span {
+      span {
         font-family: monospace;
-      }
-
-      header {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        width: 70dvw;
-        gap: 0.666em;
-        padding: 0.666em;
-        background: grey;
-        z-index: 10;
+        font-size: 0.9em;
       }
     </style>
   </head>
   <body>
     <header></header>
-    <div style="display: flex; flex-flow: column nowrap; width: 100%; max-width: 30dvw">
-      <div id="titles"></div>
-      <iframe id="p" src="https://www.youtube.com/embed/0"></iframe>
-    </div>
-    <div id="thumbs"></div>
+    <div id="v0"></div>
 
     <script>
       let v0 = []
       let videos = []
-      let current = {}
       let page = 1
 
-      window.addEventListener('scroll', async (e) => {
-        if (window.innerHeight + Math.round(window.scrollY) >= document.querySelector('#thumbs').offsetHeight) {
+      window.addEventListener('scroll', async function (e) {
+        if (window.innerHeight + Math.round(window.scrollY) >= document.body.offsetHeight) {
           page++
           await get()
           ui()
@@ -128,64 +101,37 @@
       }
 
       function ui() {
-        document.querySelector('#titles').innerHTML = ''
-        document.querySelector('#thumbs').innerHTML = ''
+        document.getElementById('v0').innerHTML = ''
 
         for (const v of videos) {
-          const title = document.createElement('div')
-          title.classList.add('title')
+          const div = document.createElement('div')
+          div.classList.add('v')
 
           const p = document.createElement('p')
-          p.innerHTML = `${v.title} (${v.timestamp})`
-          title.appendChild(p)
+          p.innerHTML = `<span>${v.uploadDate}</span> ${v.title} (${v.timestamp})`
+          div.appendChild(p)
 
           const a = document.createElement('a')
-          a.addEventListener('click', function (e) {
-            if (current !== v) e.preventDefault()
-            document.querySelector('#p').src = `https://www.youtube.com/embed/${v.videoId}`
-            current = v
-          })
           a.href = v.url
           a.target = '_blank'
 
-          a.appendChild(p)
-          title.appendChild(a)
-
-          document.querySelector('#titles').appendChild(title)
-
-          const thumb = document.createElement('div')
-          thumb.classList.add('thumb')
-
-          const pp = document.createElement('p')
-          pp.innerHTML = `<span>${v.uploadDate}</span> ${v.title} (${v.timestamp})`
-          thumb.appendChild(pp)
-
           const img = document.createElement('img')
           img.src = v.thumbnail
+          img.alt = v.title
 
-          const aa = document.createElement('a')
-          aa.addEventListener('click', function (e) {
-            if (current !== v) e.preventDefault()
-            document.querySelector('#p').src = `https://www.youtube.com/embed/${v.videoId}`
-            current = v
-          })
-          aa.href = v.url
-          aa.target = '_blank'
+          a.appendChild(img)
+          div.appendChild(a)
 
-          aa.appendChild(img)
-          thumb.appendChild(aa)
-
-          document.querySelector('#thumbs').appendChild(thumb)
+          document.getElementById('v0').appendChild(div)
         }
       }
 
       async function get() {
-        const URL = location.hostname === 'localhost' ? `http://localhost:3666/yt/0?page=${page}` : `/yt/0?page=${page}`
-        const response = await fetch(URL)
+        const response = await fetch(`/yt/0?page=${page}`)
         const data = await response.json()
         v0 = [...v0, ...data.videos]
         videos = [...videos, ...data.videos]
-        console.log(videos.length, videos)
+        console.log(videos.length)
       }
 
       async function init() {
