--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,12 @@
         font-family: monospace;
         font-size: 0.9em;
       }
+
+      @media (max-width: 600px) {
+        #v0 {
+          grid-template-columns: repeat(3, 1fr);
+        }
+      }
     </style>
   </head>
   <body>
